--- a/eeg_classification.ipynb
+++ b/eeg_classification.ipynb
@@ -27,7 +27,7 @@
     "import time, sys, os\n",
     "\n",
     "from utils import MindBigData, GetDataSet, GetDataLoaders, GetDataLoadersEEGImages, GetDataAndPreProcess\n",
-    "\n",
+    "import MultilayerBidirectionalRNN\n",
     "\n",
     "\n",
     "seed = 123\n",
@@ -104,6 +104,23 @@
     "train_loader_preprocessed, valid_loader_preprocessed, test_loader_preprocessed = GetDataLoaders(x_preprocessed, y, batch_size=64)\n",
     "train_loader_reconstructed, valid_loader_reconstructed, test_loader_reconstructed = GetDataLoaders(x_reconstructed, y, batch_size=64)\n",
     "train_loader_standardized, valid_loader_standardized, test_loader_standardized = GetDataLoaders(x_standardized, y, batch_size=64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize the model\n",
+    "model = MultilayerBidirectionalRNN(input_shape=(14, 256), num_classes=10)\n",
+    "\n",
+    "# Train the model and save the best one\n",
+    "model.train(train_loader_standardized, valid_loader_standardized, epochs=10, checkpoint_path='best_model.h5')\n",
+    "\n",
+    "# Evaluate the best model on the test set\n",
+    "test_loss, test_acc = model.evaluate(test_loader_standardized)\n",
+    "print(f'Test Loss: {test_loss:.4f}, Test Accuracy: {test_acc:.4f}')"
    ]
   },
   {
